[MCOMPILER-372] for each module, --patch-module add tests artifacts (when existing) For each module : --add-reads <module name>=ALL-UNNAMED given access to classes from unnamed modules (for example JUnit classes)